--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,3 +135,4 @@ importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(truncnorm,rtruncnorm)
 importFrom(utils,packageVersion)
+importFrom(Hmisc,rcorr)
