--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Type: Package
 Version: 3.3-7
 Authors@R: c(person(given = "Gleb", family="Tikhonov", role="aut"),
    person(given="Otso", family="Ovaskainen",
-      email="otso.ovaskainen@helsinki.fi",
+      email="otso.t.ovaskainen@jyu.fi",
       comment = c(ORCID="0000-0001-9750-4421"), role=c("aut", "cre")),
    person(given="Jari", family="Oksanen", role=c("aut"),
    email="jhoksane@gmail.com"),
